--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
     <!-- google font link end -->
 
+    <!-- tailwind css & daisy ui cdn start -->
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.20/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- tailwind css & daisy ui cdn end -->
+
     <!-- external css file link start -->
 
     <link rel="stylesheet" href="css/style.css">
