--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                     colors: {
                         'web-primary': '#E76F51',
                         'web-black': '#000000',
+                        'web-background': '#fdf1ee',
+                        'web-semi-black': '#000000CC',
                     }
                 }
             }
@@ -99,6 +101,34 @@
         </nav>
 
         <!-- nav section end -->
+
+        <!-- banner section start -->
+
+        <section class="py-14 md:pt-14 lg:pt-14 bg-web-background w-full md:h-[750px] lg:h-[550px]">
+            <div>
+                <div class="hero space-x-12">
+                    <div
+                        class="hero-content flex-col-reverse md:flex-col-reverse lg:flex-row-reverse items-center md:gap-10 lg:gap-44">
+                        <img src="images/slider/bike3.png" alt="bike-3" class="mt-9 md:mt-0 lg:mt-0" />
+                        <div>
+                            <h1 class="text-2xl md:text-5xl lg:text-5xl font-bold text-web-black font-poppins text-6xl">
+                                Ride-on R15
+                                V4 <br> with
+                                Smile</h1>
+                            <p class="py-6 font-poppins text-base font-light text-web-semi-black">Amet minim mollit non
+                                deserunt
+                                ullamco <br>
+                                est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.
+                            </p>
+                            <button
+                                class="btn bg-web-primary text-white font-poppins text-sm font-normal content-center hover:text-web-black px-[32px] py-[17px]">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- banner section end -->
 
     </header>
 
