featured bike added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="hero space-x-12">
                     <div
                         class="hero-content flex-col-reverse md:flex-col-reverse lg:flex-row-reverse items-center md:gap-10 lg:gap-44">
-                        <img src="images/slider/bike3.png" alt="bike-3" class="mt-9 md:mt-0 lg:mt-0" />
+                        <img src="images/feature/bike3.png" alt="bike-3" class="mt-9 md:mt-0 lg:mt-0" />
                         <div>
                             <h1 class="text-2xl md:text-5xl lg:text-5xl font-bold text-web-black font-poppins text-6xl">
                                 Ride-on R15
@@ -133,6 +133,40 @@
     </header>
 
     <!-- header section end -->
+
+    <!-- main section start -->
+
+    <main class="container mx-auto">
+
+        <!-- featured bike section start -->
+
+        <section class="mt-[169px]">
+            <h3 class="text-center text-web-black font-poppins text-3xl md:text-5xl lg:text-5xl font-semibold">Fetured
+                Bikes In
+                This Year
+            </h3>
+            <p class="text-center text-web-primary font-poppins text-sm font-semibold">Best bike collection</p>
+            <img src="images/others/line.png" alt="line" class="mx-auto mt-[3.5px]">
+
+            <div
+                class="mt-[50px] flex flex-col md:flex-row lg:flex-row justify-between items-center px-5 md:px-0 lg:px-0">
+                <div>
+                    <img src="images/feature/bike1.png" alt="bike1">
+                </div>
+                <div>
+                    <img src="images/feature/bike2.png" alt="bike2">
+                </div>
+                <div>
+                    <img src="images/feature/bike4.png" alt="bike4">
+                </div>
+            </div>
+        </section>
+
+        <!-- featured bike section end -->
+
+    </main>
+
+    <!-- main section end -->
 
 </body>
 
