latest news added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         'web-black': '#000000',
                         'web-background': '#fdf1ee',
                         'web-semi-black': '#000000CC',
+                        'latest-title': '#0A0826',
+                        'card-title': '#18191F',
+                        'card-description': '#6C6C6C',
                     }
                 }
             }
@@ -163,6 +166,82 @@
         </section>
 
         <!-- featured bike section end -->
+
+        <!-- latest news section start -->
+
+        <section class="mt-[130px]">
+            <h3 class="text-center font-poppins text-5xl font-semibold text-latest-title">Latest News</h3>
+
+            <div
+                class="mt-[50px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center space-y-[17.48px]">
+
+                <!-- first card start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/latest1.png" alt="latest1" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title font-poppins text-[26px] font font-semibold card-title">Ducati XDIAVEL
+                            S-73</h2>
+                        <p class="font-poppins text-base font-normal card-description">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing
+                            elit.
+                            Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-web-primary text-white hover:text-web-black">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- first card end -->
+
+                <!-- second card start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/latest2.png" alt="latest2" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title font-poppins text-[26px] font font-semibold card-title">Motorcycles &
+                            Scooters</h2>
+                        <p class="font-poppins text-base font-normal card-description">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing
+                            elit.
+                            Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-web-primary text-white hover:text-web-black">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- second card end -->
+
+                <!-- third card start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/latest3.png" alt="latest3" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title font-poppins text-[26px] font font-semibold card-title">2021 Honda CBR500R
+                        </h2>
+                        <p class="font-poppins text-base font-normal card-description">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing
+                            elit.
+                            Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-web-primary text-white hover:text-web-black">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- third card end -->
+
+            </div>
+        </section>
+
+        <!-- latest news section end -->
 
     </main>
 
