happy clients added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                         'latest-title': '#0A0826',
                         'card-title': '#18191F',
                         'card-description': '#6C6C6C',
+                        'user-title': '#23A6F0',
+                        'user-position': '#252B42',
                     }
                 }
             }
@@ -242,6 +244,103 @@
         </section>
 
         <!-- latest news section end -->
+
+        <!-- clients section start -->
+
+        <section class="mt-[130px]">
+            <h3 class="font-poppins text-5xl md:text-5xl lg:text-5xl font-semibold text-center text-latest-title">Happy
+                <span class="text-web-primary">Clients
+                    says</span>
+            </h3>
+
+            <div
+                class="mt-[50px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center space-y-[17.48px]">
+
+                <!-- first review start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/user-1.png" alt="user-1" class="w-[149px] h-[149px]" /></figure>
+                    <div class="card-body">
+                        <p class="text-center font-poppins text-base font-normal text-card-description">Slate helps you
+                            see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center mt-3">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-poppins text-sm font-semibold text-user-title mt-3">Regina Miles</h3>
+                            <h3 class="font-poppins text-sm font-semibold text-user-position mt-3">Banker</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- first review end -->
+
+                <!-- second review start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/user-2.png" alt="user-2" class="w-[149px] h-[149px]" /></figure>
+                    <div class="card-body">
+                        <p class="text-center font-poppins text-base font-normal text-card-description">Slate helps you
+                            see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center mt-3">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-poppins text-sm font-semibold text-user-title mt-3">Regina Miles</h3>
+                            <h3 class="font-poppins text-sm font-semibold text-user-position mt-3">Banker</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- second review end -->
+
+                <!-- third review start -->
+
+                <div class="card w-96 bg-base-100 shadow-xl pt-[20px]">
+                    <figure><img src="images/others/user-3.png" alt="user-3" class="w-[149px] h-[149px]" /></figure>
+                    <div class="card-body">
+                        <p class="text-center font-poppins text-base font-normal text-card-description">Slate helps you
+                            see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating justify-center mt-3">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-poppins text-sm font-semibold text-user-title mt-3">Regina Miles</h3>
+                            <h3 class="font-poppins text-sm font-semibold text-user-position mt-3">Banker</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- third review end -->
+
+            </div>
+
+
+
+        </section>
+
+        <!-- clients section end -->
 
     </main>
 
