--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                         'card-description': '#6C6C6C',
                         'user-title': '#23A6F0',
                         'user-position': '#252B42',
+                        'faq-heading': '#0D0925',
+                        'accordian-title': '#7E848C',
                     }
                 }
             }
@@ -172,7 +174,8 @@
         <!-- latest news section start -->
 
         <section class="mt-[130px]">
-            <h3 class="text-center font-poppins text-5xl font-semibold text-latest-title">Latest News</h3>
+            <h3 class="text-center font-poppins text-3xl md:text-5xl lg:text-5xl font-semibold text-latest-title">Latest
+                News</h3>
 
             <div
                 class="mt-[50px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center space-y-[17.48px]">
@@ -245,10 +248,10 @@
 
         <!-- latest news section end -->
 
-        <!-- clients section start -->
+        <!-- happy clients section start -->
 
         <section class="mt-[130px]">
-            <h3 class="font-poppins text-5xl md:text-5xl lg:text-5xl font-semibold text-center text-latest-title">Happy
+            <h3 class="font-poppins text-3xl md:text-5xl lg:text-5xl font-semibold text-center text-latest-title">Happy
                 <span class="text-web-primary">Clients
                     says</span>
             </h3>
@@ -340,7 +343,93 @@
 
         </section>
 
-        <!-- clients section end -->
+        <!-- happy clients section end -->
+
+        <!-- faq section start -->
+
+        <section class="mt-[130px]">
+            <h3 class="text-center font-poppins text-3xl md:text-5xl lg:text-5xl font-semibold text-faq-heading">
+                Frequently Asked
+                <span class="text-web-primary">Questions</span>
+            </h3>
+
+            <div class="hero mt-[50px]">
+                <div class="hero-content flex-col lg:flex-row gap-x-[90px] items-center justify-items-center">
+                    <img src="images/others/faq.png" alt="faq" class="w-3/4 lg:max-w-sm rounded-lg" />
+                    <div>
+
+                        <!-- first question start -->
+
+                        <div class="collapse collapse-arrow px-[24px] py-[20px] border rounded-[5px] border-[#D5E5FB]">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-[20px] font-medium font-inter">
+                                What are the most important things I should
+                                know about riding a bike?
+                            </div>
+                            <div class="collapse-content font-inter text-base font-normal text-accordian-title">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+
+                        <!-- first question end -->
+
+                        <!-- second question start -->
+
+                        <div class="collapse collapse-arrow px-[24px] py-[20px] border rounded-[5px] border-[#D5E5FB]">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-[20px] font-medium font-inter">
+                                How can I tell if my helmet is old and I need a
+                                new one?
+                            </div>
+                            <div class="collapse-content font-inter text-base font-normal text-accordian-title">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+
+                        <!-- second question end -->
+
+                        <!-- third question start -->
+
+                        <div class="collapse collapse-arrow px-[24px] py-[20px] border rounded-[5px] border-[#D5E5FB]">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-[20px] font-medium font-inter">
+                                My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content font-inter text-base font-normal text-accordian-title">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+
+                        <!-- third question end -->
+
+                        <!-- fourth question start -->
+
+                        <div class="collapse collapse-arrow px-[24px] py-[20px] border rounded-[5px] border-[#D5E5FB]">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-[20px] font-medium font-inter">
+                                What rules should I follow when riding my bike?
+                            </div>
+                            <div class="collapse-content font-inter text-base font-normal text-accordian-title">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+
+                        <!-- fourth question end -->
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- faq section end -->
 
     </main>
 
