--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
         <!-- faq section start -->
 
-        <section class="mt-[130px]">
+        <section class="mt-[130px] pb-[130px]">
             <h3 class="text-center font-poppins text-3xl md:text-5xl lg:text-5xl font-semibold text-faq-heading">
                 Frequently Asked
                 <span class="text-web-primary">Questions</span>
@@ -434,6 +434,37 @@
     </main>
 
     <!-- main section end -->
+
+    <!-- footer section start -->
+
+    <footer class="footer pt-14 pb-[84px] bg-[#0B0D17] text-white justify-items-center">
+        <aside>
+            <div class="flex flex-col md:flex-row lg:flex-row gap-6">
+                <p class="text-base font-normal">Download Now</p>
+                <p class="text-base font-normal">License</p>
+            </div>
+
+            <div class="flex flex-col md:flex-row lg:flex-row gap-6">
+                <p class="text-base font-normal">About</p>
+                <p class="text-base font-normal">Features</p>
+                <p class="text-base font-normal">Pricing</p>
+                <p class="text-base font-normal">Careers</p>
+                <p class="text-base font-normal">Help</p>
+                <p class="text-base font-normal">Privacy Policy</p>
+            </div>
+
+            <p class="text-sm font-normal mt-6">© 2020 bike. All rights reserved</p>
+        </aside>
+        <nav>
+            <header class="footer-title text-[#D9DBE1]">Get the App</header>
+            <div class="grid grid-cols-1 gap-4">
+                <a><img class="wd-[135px] h-[40px]" src="images/others/android.png" alt=""></a>
+                <a><img class="wd-[135px] h-[40px]" src="images/others/ios.png" alt=""></a>
+            </div>
+        </nav>
+    </footer>
+
+    <!-- footer section end -->
 
 </body>
 
